--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,6 +5,24 @@
 
 @tailwind components;
 
+.btn {
+  @apply inline-block px-5 py-3 rounded-lg text-sm uppercase 
+         tracking-wider font-semibold
+}
+.btn:focus {
+  @apply outline-none shadow-outline;
+}
+
+.btn-primary {
+  @apply bg-brand-600 text-white
+}
+.btn-primary:hover {
+  @apply bg-brand-500;
+}
+.btn-primary:active {
+  @apply bg-brand-700;
+}
+
 @tailwind utilities;
 
 /* LiveView specific classes for your customizations */
