--- a/lib/encore_web/templates/recruitment/apply.html.eex
+++ b/lib/encore_web/templates/recruitment/apply.html.eex
@@ -1,8 +1,7 @@
-<div class="container px-5 mx-auto flex flex-wrap">
+<div class="container max-w-4xl px-5 mx-auto flex flex-wrap">
     <div class="flex flex-wrap w-full">
         <h1 class="mt-4 px-4 py-2 text-2xl">How to apply</h1>
-        <div class="px-4 py-2 flex flex-wrap w-full">
-            <div class="lg:w-2/5 md:w-1/2 md:pr-10 md:py-6">
+        <div class="px-4 py-2 w-full">
             <%= for step <- @steps do %>
             <div class="flex relative pb-12">
                 <div class="h-full w-10 absolute inset-0 flex items-center justify-center">
@@ -11,14 +10,14 @@
                 <div class="flex-shrink-0 w-10 h-10 rounded-full bg-brand-600 inline-flex items-center justify-center text-white relative z-10">
                     <%= step.index %>
                 </div>
-                <div class="flex-grow pl-4">
+                <div class="flex-grow pl-4" x-data="{ showDescription: false }">
                     <h2 class="font-medium title-font text-sm text-gray-900 mb-1 tracking-wider uppercase"><%= step.title %></h2>
-                    <p class="leading-relaxed"><%= step.description %></p>
+                    <p class="text-brand-600" x-show="!showDescription" @click="showDescription=true">Read more</p>
+                    <p class="text-brand-600" x-show="showDescription" @click="showDescription=false">Hide</p>
+                    <p x-show="showDescription" class="leading-relaxed"><%= step.description %></p>
                 </div>
             </div>
             <% end %>
-            </div>
-            <img class="lg:w-3/5 md:w-1/2 object-cover object-center rounded-lg md:mt-0 mt-12" src="https://dummyimage.com/1200x500" alt="step">
         </div>
     </div>
 </div>
