--- a/lib/encore_web/templates/recruitment/index.html.eex
+++ b/lib/encore_web/templates/recruitment/index.html.eex
@@ -1,68 +1,68 @@
 
-<div class="container px-5 mx-auto flex flex-wrap">
-    <div class="flex flex-wrap w-full">
-        <h1 class="mt-4 px-4 py-2 text-2xl">Member Services</h1>
+<div class="container sm:px-5 mx-auto flex flex-wrap">
+    <h1 class="mt-2 sm:mt-4 px-4 py-2 text-2xl">Member Services</h1>
 
-        <div class="flex flex-wrap p-2 items-stretch">
-            <div class="w-full sm:w-1/2 lg:w-1/3 p-2">
-                <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
-                    <h4 class="text-lg flex items-center">
-                    <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
-                    </svg>
-                    <span class="ml-4 inline-block">Pending Applications</span>
-                    </h4>
-                    <p class="mt-3 flex-grow text-gray-800">Recruitment applications with an outstanding decision</p>
-                    <a class="mt-3 inline-flex items-center text-brand-700">
-                        View
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
-                    </a>
-                </div>
+    <div class="flex flex-wrap p-2 items-stretch w-full">
+        <div class="w-full sm:w-1/2 lg:w-1/3 p-2 relative">
+            <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
+                <h4 class="text-lg flex items-center">
+                <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01" />
+                </svg>
+                <span class="ml-4 inline-block">Pending Applications</span>
+                </h4>
+                <p class="mt-3 flex-grow text-gray-800">Recruitment applications with an outstanding decision</p>
+                <a class="mt-3 inline-flex items-center text-brand-700">
+                    View
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+                </a>
+                <span class="inline-block h-6 w-6 text-center text-white absolute right-0 top-0 rounded-full bg-red-600">4</span>
             </div>
-            <div class="w-full sm:w-1/2 lg:w-1/3 p-2">
-                <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
-                    <h4 class="text-lg flex items-center">
-                    <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
-                    </svg>
-                    <span class="ml-4 inline-block">Novices</span>
-                    </h4>
-                    <p class="mt-3 flex-grow text-gray-800">Novice members currently on trial</p>
-                    <a class="mt-3 inline-flex items-center text-brand-700">
-                        View
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
-                    </a>
-                </div>
+        </div>
+        <div class="w-full sm:w-1/2 lg:w-1/3 p-2 relative">
+            <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
+                <h4 class="text-lg flex items-center">
+                <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
+                </svg>
+                <span class="ml-4 inline-block">Novices</span>
+                </h4>
+                <p class="mt-3 flex-grow text-gray-800">Novice members currently on trial</p>
+                <a class="mt-3 inline-flex items-center text-brand-700">
+                    View
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+                </a>
             </div>
-            <div class="w-full sm:w-1/2 lg:w-1/3 p-2">
-                <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
-                    <h4 class="text-lg flex items-center">
-                    <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
-                    </svg>
-                    <span class="ml-4 inline-block">Members</span>
-                    </h4>
-                    <p class="mt-3 flex-grow text-gray-800">All corporation members and their alts.</p>
-                    <a class="mt-3 inline-flex items-center text-brand-700">
-                        View
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
-                    </a>
-                </div>
+        </div>
+        <div class="w-full sm:w-1/2 lg:w-1/3 p-2 relative">
+            <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
+                <h4 class="text-lg flex items-center">
+                <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4.354a4 4 0 110 5.292M15 21H3v-1a6 6 0 0112 0v1zm0 0h6v-1a6 6 0 00-9-5.197M13 7a4 4 0 11-8 0 4 4 0 018 0z" />
+                </svg>
+                <span class="ml-4 inline-block">Members</span>
+                </h4>
+                <p class="mt-3 flex-grow text-gray-800">All corporation members and their alts.</p>
+                <a class="mt-3 inline-flex items-center text-brand-700">
+                    View
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+                </a>
             </div>
-            <div class="w-full sm:w-1/2 lg:w-1/3 p-2">
-                <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
-                    <h4 class="text-lg flex items-center">
-                    <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" />
-                    </svg>
-                    <span class="ml-4 inline-block">Recruitment archive</span>
-                    </h4>
-                    <p class="mt-3 flex-grow text-gray-800">Archive of completed recruitment applications where a decision has been reached</p>
-                    <a class="mt-3 inline-flex items-center text-brand-700">
-                        View
-                        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
-                    </a>
-                </div>
+        </div>
+        <div class="w-full sm:w-1/2 lg:w-1/3 p-2 relative">
+            <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
+                <h4 class="text-lg flex items-center">
+                <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4" />
+                </svg>
+                <span class="ml-4 inline-block">Recruitment archive</span>
+                </h4>
+                <p class="mt-3 flex-grow text-gray-800">Archive of completed recruitment applications where a decision has been reached</p>
+                <a class="mt-3 inline-flex items-center text-brand-700">
+                    View
+                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+                </a>
             </div>
         </div>
     </div>
+</div>
