--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,13 +14,11 @@
 }
 
 .btn-primary {
-  @apply bg-brand-600 text-white
+  @apply bg-brand-600 text-white hover:bg-brand-500 active:bg-brand-700;
 }
-.btn-primary:hover {
-  @apply bg-brand-500;
-}
-.btn-primary:active {
-  @apply bg-brand-700;
+
+.btn-gray {
+  @apply bg-gray-400 text-gray-900 hover:bg-gray-300 active:bg-gray-500 active:text-white;
 }
 
 @tailwind utilities;
