--- a/lib/encore_web/templates/page/index.html.eex
+++ b/lib/encore_web/templates/page/index.html.eex
@@ -1,1 +1,14 @@
-<h1>Page.Index</h1>
+  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+    <div class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">No Vacancies Auth Services
+      </h1>
+      <p class="mb-8 leading-relaxed">Recruitment and Authentication tools for No Vacancies.</p>
+      <div class="flex justify-center">
+        <a class="inline-flex btn btn-primary" href="<%= Routes.recruitment_path(@conn, :apply) %>">How to apply</a>
+        <a class="ml-4 inline-flex btn btn-gray" href="<%= Routes.auth_path(@conn, :login) %>">Sign In</a>
+      </div>
+    </div>
+    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+      <img class="object-cover object-center rounded" alt="hero" src="https://i.imgur.com/cpESvjr.jpg">
+    </div>
+  </div>
