--- a/lib/encore_web/templates/recruitment/application.html.eex
+++ b/lib/encore_web/templates/recruitment/application.html.eex
@@ -1,8 +1,8 @@
 <div class="container sm:px-5 mx-auto">
-    <h1 class="mt-2 sm:mt-4 px-4 py-2 text-2xl">My Application</h1>
+    <h1 class="mt-2 sm:mt-4 py-2 text-2xl">My Application</h1>
 
-    <div class="flex flex-wrap p-2 items-stretch w-full">
-        <div class="w-full p-2 relative">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mt-4">
+        <div class="sm:col-span-2 lg:col-span-3 relative">
             <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white" x-data="{ showDescription: false }">
                 <h4 class="text-lg flex items-center">
                     Status: <%= status_title(@file.status) %>
@@ -16,7 +16,7 @@
                 </p>
             </div>
         </div>
-        <div class="w-full sm:w-1/2 lg:w-1/3 p-2 relative">
+        <div class="relative">
             <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
                 <h4 class="text-lg flex items-center">
                 <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -35,7 +35,7 @@
                 </a>
             </div>
         </div>
-        <div class="w-full sm:w-1/2 lg:w-1/3 p-2 relative">
+        <div class="relative">
             <div class="p-4 flex flex-col sm:h-full border rounded-md bg-white">
                 <h4 class="text-lg flex items-center">
                 <svg class="h-10 w-10 block rounded-full bg-brand-600 stroke-current text-white p-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
