--- a/lib/encore_web/templates/layout/account_dropdown.html.eex
+++ b/lib/encore_web/templates/layout/account_dropdown.html.eex
@@ -3,7 +3,7 @@
         <img class="h-full w-full object-cover" src="<%= ImageServer.portrait(@current_user.main_character) %>" alt="Avatar">
     </button>
     <div :class="{'hidden': !isOpen, 'block': isOpen}" @click.away="isOpen = false" class="absolute right-0 mt-2 w-48 py-2 bg-white rounded-lg shadow-xl">
-        <a href="#" class="block px-4 py-2 text-gray-800 hover:bg-indigo-500 hover:text-white">Account settings</a>
-                <%= link "Sign out", to: Routes.auth_path(@conn, :logout), method: :delete, class: "block px-4 py-2 text-gray-800 hover:bg-indigo-500 hover:text-white" %>
+        <%= link "Profile", to: Routes.user_path(@conn, :show), class: "block px-4 py-2 text-gray-800 hover:bg-indigo-500 hover:text-white" %>
+        <%= link "Sign out", to: Routes.auth_path(@conn, :delete), method: :delete, class: "block px-4 py-2 text-gray-800 hover:bg-indigo-500 hover:text-white" %>
     </div>
 </div>
