--- a/lib/encore_web/templates/layout/navigation.html.eex
+++ b/lib/encore_web/templates/layout/navigation.html.eex
@@ -48,11 +48,11 @@
                 <span class="ml-3 font-semibold text-white"><%= @current_user.main_character.name %></span>
             </div>
             <div class="mt-4">
-                <a href="" class="block text-gray-400 hover:text-white">Account settings</a>
-                <%= link "Sign out", to: Routes.auth_path(@conn, :logout), method: :delete, class: "block text-gray-400 hover:text-white" %>
+                <%= link "Profile", to: Routes.user_path(@conn, :show), class: "block text-gray-400 hover:text-white" %>
+                <%= link "Sign out", to: Routes.auth_path(@conn, :delete), method: :delete, class: "block text-gray-400 hover:text-white" %>
             </div>
             <% else %>
-            <%= live_redirect "Sign in", to: Routes.auth_path(@conn, :login), class: "block my-1 px-3 py-1 text-gray-400 rounded hover:bg-brand-700" %>
+            <%= live_redirect "Sign in", to: Routes.auth_path(@conn, :new), class: "block my-1 px-3 py-1 text-gray-400 rounded hover:bg-brand-700" %>
             <% end %>
         </div>
     </nav>
